<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="settings"
        android:title="@string/settings_on_of"
        android:summary="@string/settings_on_off_summary"
        android:defaultValue="true" />
    <PreferenceCategory
        android:title="@string/notification"
        android:dependency="settings">
        <CheckBoxPreference
            android:key="notification"
            android:title="@string/notification"
            android:summary="@string/hint_summary"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="ringtone"
            android:title="@string/ringtone"
            android:summary="@string/ringtone_summary"
            android:defaultValue="true"
            android:dependency="notification"
            />
        <RingtonePreference
        android:key="setting_ringtone"
        android:title="@string/setting_ringtone"
        android:showDefault="true"
        android:showSilent="true"
        android:summary="Устанавливает мелодию для звонка (вкл. или выкл.)"
            android:dependency="ringtone"/>
    </PreferenceCategory>

</PreferenceScreen>
