<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.drwat.lab2.AddActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:id="@+id/addButton"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name_label"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/NameEditTextView"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_alignRight="@+id/addButton"
        android:layout_alignEnd="@+id/addButton"
        android:layout_alignLeft="@+id/addButton"
        android:layout_alignStart="@+id/addButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/count_label"
        android:id="@+id/textView5"
        android:layout_below="@+id/NameEditTextView"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CountEditTextView"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_alignRight="@+id/addButton"
        android:layout_alignEnd="@+id/addButton"
        android:layout_alignLeft="@+id/addButton"
        android:layout_alignStart="@+id/addButton" />
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/CountEditTextView"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:id="@+id/relativeLayout"
    android:layout_margin="16dp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getPhoto"
        android:id="@+id/getPhoto"
        android:onClick="getPhoto"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/imagePhotoThumbnail"
        android:layout_toEndOf="@+id/imagePhotoThumbnail"
        android:layout_marginLeft="60dp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imagePhotoThumbnail"
        android:src="@android:mipmap/sym_def_app_icon"
        android:scaleType="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
</RelativeLayout>
